--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 port = 1500
 dburl=mongodb+srv://ahedbahget70:bwTFGbithvm5GwUL@cluster0.ujiujf5.mongodb.net/
 secret_accesstoken=ahmedbahgetelsayed
-cloud_name= 'dwukaiuw0'
-api_key= '542198262994638'
-api_secret= 'oys-6nsCF5sKsr_aVb-O4ySD6vs
+cloud_name= dwukaiuw0
+api_key= 542198262994638
+api_secret= oys-6nsCF5sKsr_aVb-O4ySD6vs
 
