--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.424.0",
